fix: revert button group toggleable changes
Grid filter menu was broken

--- a/projects/mona-ui/src/lib/filter/components/filter-menu/filter-menu.component.html
+++ b/projects/mona-ui/src/lib/filter/components/filter-menu/filter-menu.component.html
@@ -44,6 +44,7 @@
     <div class="mona-filter-menu-item" *ngIf="firstFilterValid">
         <mona-button-group selection="single" [disabled]="!firstFilterValid">
             <button monaButton [selected]="item.value === selectedConnectorItem?.value"
+                    [toggleable]="false"
                     (click)="onConnectorChange(item)" *ngFor="let item of connectorDataItems">{{item.text}}</button>
         </mona-button-group>
     </div>
