--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -174,7 +174,7 @@
                             </div>
                             <div>
                                 <button monaButton>Button 1</button>
-                                <button monaButton [toggleable]="true">Button 2</button>
+                                <button monaButton [toggleable]="true">Toggleable Button</button>
                                 <button monaButton [flat]="true">Flat Button</button>
                                 <button monaButton [primary]="true">Primary Button</button>
                                 <button monaButton [disabled]="true">Disabled Button</button>
@@ -220,17 +220,17 @@
                             </div>
                             <div style="display: flex; align-items: center;">
                                 <mona-button-group selection="multiple">
-                                    <button monaButton>B</button>
-                                    <button monaButton>I</button>
-                                    <button monaButton>U</button>
-                                    <button monaButton [(selected)]="buttonGroupButtonSelected">
+                                    <button monaButton [toggleable]="true">B</button>
+                                    <button monaButton [toggleable]="true">I</button>
+                                    <button monaButton [toggleable]="true">U</button>
+                                    <button monaButton [toggleable]="true" [(selected)]="buttonGroupButtonSelected">
                                         <span style="text-decoration: line-through;">S</span>
                                     </button>
                                 </mona-button-group>
                                 <mona-button-group selection="single">
-                                    <button monaButton>Left</button>
-                                    <button monaButton>Center</button>
-                                    <button monaButton [(selected)]="buttonGroupButtonSelected">Right</button>
+                                    <button monaButton [toggleable]="true">Left</button>
+                                    <button monaButton [toggleable]="true">Center</button>
+                                    <button monaButton [toggleable]="true" [(selected)]="buttonGroupButtonSelected">Right</button>
                                 </mona-button-group>
                             </div>
                             <div style="display: flex; align-items: center;">
