--- a/projects/mona-ui/src/lib/list-box/components/list-box/list-box.component.html
+++ b/projects/mona-ui/src/lib/list-box/components/list-box/list-box.component.html
@@ -24,30 +24,37 @@
          [class.mona-list-box-toolbar-vertical-reverse]="direction()==='vertical-reverse'"
          *ngIf="toolbarOptions != null">
         <button monaButton (click)="onMoveUpClick()"
+                [disabled]="selectedItem == null"
                 *ngIf="toolbarOptions?.actions|contain:'moveUp'">
             <fa-icon [icon]="moveUpIcon"></fa-icon>
         </button>
         <button monaButton (click)="onMoveDownClick()"
+                [disabled]="selectedItem == null"
                 *ngIf="toolbarOptions?.actions|contain:'moveDown'">
             <fa-icon [icon]="moveDownIcon"></fa-icon>
         </button>
         <button monaButton (click)="onTransferToClick()"
+                [disabled]="selectedItem == null"
                 *ngIf="toolbarOptions?.actions|contain:'transferTo'">
             <fa-icon [icon]="transferToIcon"></fa-icon>
         </button>
         <button monaButton (click)="onTransferFromClick()"
+                [disabled]="connectedList?.selectedItem == null"
                 *ngIf="toolbarOptions?.actions|contain:'transferFrom'">
             <fa-icon [icon]="transferFromIcon"></fa-icon>
         </button>
         <button monaButton (click)="onTransferAllToClick()"
+                [disabled]="listBoxItems().length === 0"
                 *ngIf="toolbarOptions?.actions|contain:'transferAllTo'">
             <fa-icon [icon]="transferAllToIcon"></fa-icon>
         </button>
         <button monaButton (click)="onTransferAllFromClick()"
+                [disabled]="!connectedList || connectedList.listBoxItems().length === 0"
                 *ngIf="toolbarOptions?.actions|contain:'transferAllFrom'">
             <fa-icon [icon]="transferAllFromIcon"></fa-icon>
         </button>
         <button monaButton (click)="onRemoveClick()"
+                [disabled]="selectedItem == null"
                 *ngIf="toolbarOptions?.actions|contain:'remove'">
             <fa-icon [icon]="removeIcon"></fa-icon>
         </button>
