fix: change list box toolbar button order

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -521,7 +521,7 @@
                                 <mona-list-box [items]="dropdownListDataItems" textField="text"
                                                (selectionChange)="print($event)"
                                                (actionClick)="onListBoxActionClick($event)"
-                                               [toolbar]="{position:'bottom'}"
+                                               [toolbar]="{position:'right'}"
                                                [connectedList]="listBox2">
                                     <ng-template monaListBoxItemTemplate let-item>
                                         <div style="color: #00a86b; padding: 4px 8px;">{{item.text}}</div>
