--- a/projects/mona-ui/src/lib/inputs/numeric-text-box/components/numeric-text-box/numeric-text-box.component.scss
+++ b/projects/mona-ui/src/lib/inputs/numeric-text-box/components/numeric-text-box/numeric-text-box.component.scss
@@ -4,6 +4,7 @@
 
 div.mona-numeric-text-box {
     display: flex;
+    width: 100%;
     & > [monaTextBox] {
         width: 100%;
         border: none;
